--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+   
+
     <div id="loading" class="loading">
         <div class="loading-content">
             <div class="loading-text">
@@ -23,18 +25,22 @@
     </div>
 
     <div id="app">
+        <header class="app-header">
+            <img src="assets/logo.svg" alt="Olaf Logo" class="header-logo">
+        </header>
         <div class="terminal-container">
             <div class="terminal-content">
                 <div class="editor-container">
                     <div class="editor-header">
                         <span class="prompt">olaf@editor:</span>
                     </div>
-                    <textarea id="code-input" spellcheck="false">
-olaf x = 10;
+                    <div class="editor-wrapper">
+                        <div id="syntax-highlight-container" class="syntax-highlight-container"></div>
+                        <textarea id="code-input" spellcheck="false">olaf x = 10;
 olaf y = 15;
 olaf add = fn(a, b) { a + b };
-add(x, y);
-                    </textarea>
+add(x, y);</textarea>
+                    </div>
 
                     <div class="code-snippets">
                         <button class="snippet-button code-example" data-code="olaf x = 10;
@@ -95,9 +101,9 @@ fibonacci(10);">fibonacci</button>
             </div>
         </footer>
     </div>
-
     <script src="js/wasm_exec.js"></script>
     <script src="js/app.js"></script>
 </body>
 
 </html>
+
