chore:  better colrs.

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olaf Terminal Interpreter</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@ add(x, y);</textarea>
                         <button class="snippet-button code-example" data-code="sup x = 10;
 sup y = 15;
 sup add = bud(a, b) { a + b };
-add(x, y);">addition</button>
+add(x, y);">quick maths</button>
                         <button class="snippet-button code-example" data-code="sup factorial = bud(n) {
  if (n == 0) {
  return 1;
@@ -55,11 +55,11 @@ add(x, y);">addition</button>
  return n * factorial(n - 1);
  }
 };
-factorial(5);">factorial</button>
+factorial(5);">fax, my brother</button>
                         <button class="snippet-button code-example" data-code="sup a = 5;
 sup b = 10;
 sup c = if (a > b) { a } else { b };
-c;">if exp</button>
+c;">big IF?</button>
                         <button class="snippet-button code-example" data-code="sup fibonacci = bud(n) {
  if (n == 0) {
  return 0;
