--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olaf Terminal Interpreter</title>
+    <title>sup' bud?</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -23,12 +23,6 @@
     </div>
 
     <div id="app">
-        <header class="app-header">
-            <a href="/" class="logo-container">
-                <img src="assets/sup.svg" alt="Olaf Logo" class="header-logo">
-                <span class="logo-text">[a toy language in golang]</span>
-            </a>
-        </header>
         <div class="terminal-container">
             <div class="terminal-content">
                 <div class="editor-container">
@@ -91,20 +85,27 @@ fibonacci(10);">fibonacci</button>
                         <span class="prompt">sup@output:</span>
                     </div>
                     <pre id="output" class="terminal-output">// Output will appear here</pre>
+                    <div class="output-gif-container">
+                        <img src="https://i.imgur.com/1RsDbpf.gif" alt="sup sup sup" class="output-gif">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <footer id="footer" class="footer">
-            <div class="footer-links">
-                <a href="https://github.com/sup-bud" target="_blank">[know more about->sup' bud?]</a>
-                <a href="https://twitter.com/your-twitter" target="_blank">[my twitter]</a>
-            </div>
-        </footer>
+            <footer id="footer" class="footer">
+                <div class="footer-links">
+                    <a href="https://github.com/sup-bud" target="_blank">[sup' bud is toy lang made in GO]</a>
+                    <a href="https://github.com/pro0o/sup-bud" target="_blank">[know more here]</a>
+                    <a href="https://twitter.com/your-twitter" target="_blank">[my twitter]</a>
+                </div>
+            </footer>
+        </div>
+    </div>
+
+    <div class="corner-image">
+        <img src="assets/mascot.png" alt="Mascot character">
     </div>
     <script src="js/wasm_exec.js"></script>
     <script src="js/app.js"></script>
 </body>
 
 </html>
-
