--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sup' bud</title>
+    <title>sup-bud</title>
     <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -26,7 +26,7 @@
     <div id="app">
         <footer id="footer" class="footer">
             <div class="footer-links">
-                <a href="https://github.com/pro0o/sup-bud" target="_blank">[sup' bud is a toy lang made in GO?]</a>
+                <a href="https://github.com/pro0o/sup-bud" target="_blank">[sup-bud is a toy lang made in GO?]</a>
             </div>
         </footer>
         <div class="terminal-container">
